# karbitcoin

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md
include/core/: block.hpp  blockchain.hpp  storage.hpp  transaction.hpp
include/crypto/: address.hpp  ecdsa.hpp  hash.hpp  utxo.hpp  wallet.hpp
include/network/: message.hpp  p2p_node.hpp  serialization.hpp
src/: CMakeLists.txt  main.cpp
src/core/: block.cpp  blockchain.cpp  storage.cpp  transaction.cpp
src/crypto/: address.cpp  ecdsa.cpp  hash.cpp  utxo.cpp  wallet.cpp
src/network/: p2p_node.cpp
tests/: CMakeLists.txt
tests/integration/: test_mining_flow.cpp
tests/unit/core/: test_block.cpp  test_blockchain.cpp  test_difficulty.cpp  test_multithread_mining.cpp  test_persistence.cpp  test_storage.cpp  test_transaction.cpp
tests/unit/crypto/: test_ecdsa.cpp  test_hash.cpp  test_utxo.cpp  test_wallet.cpp
tests/unit/network/: test_p2p_node.cpp
